hopefully fixed text color bug on safari mobile light mode

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -20,9 +20,8 @@ body {
 	margin-left: 20px;
 	font-family: sans-serif;
 	background-color: #121212;
-	color: CanvasText;
+	color: white;
 	color-scheme: light dark;
-	box-sizing: content-box;
 }
 
 .content-body {
@@ -360,6 +359,9 @@ a:visited {
   	}
 	.patchHeader{
 		width: 10%;
+	}
+	a {
+		color: #6d6dc1;
 	}
 
 }
